--- a/index.html
+++ b/index.html
@@ -14,52 +14,38 @@
         <h1>Sunny Bhatt</h1>
 
 
-        <p><em> Owner of <strong><a href="https://en.wikipedia.org/wiki/Bugatti_Chiron">Bugatti Chiron</a></strong></em></p>
+        <p><em> Son of <strong><a href="dadinfo.html">Asutosh Bhatt </a></strong></em></p>
         <p>
-          I am Sunny Bhatt, the owner of Bugatti Chiron. I bought it for 14 crores, yes quite a big sum but for achieving a dream anything is small.<p>
+          I am Sunny Bhatt, the full time web and iOS developer. Dive in the site for more details.
 
           </p>
       </td>
     </tr>
   </table>
   <hr>
-  <h3>Information on the beauty</h3>
+  <h3>My hobbies:</h3>
   <p>
-    <ul>
-      <li>The Bugatti Chiron</a> is a mid-engine two-seater sports car developed and manufactured in Molsheim, France by French automobile manufacturer Bugatti Automobiles S.A.S.. The successor
-        to the Bugatti Veyron,[6] the Chiron was first shown at
-        the
-        Geneva Motor Show on 1 March 2016.[7][8] </li><br>
-      <li>The car is based on the Bugatti Vision Gran Turismo concept car.</li><br>
-      <li>The car is named after the Monegasque driver Louis Chiron.[9] The car shares the name with the 1999 Bugatti 18/3 Chiron concept car</li>
-    </ul>
+    <ol>
+      <li>Listening to Post Malone</li>
+      <ul>
+        <li><a href="https://www.youtube.com/watch?v=UYwF-jdcVjY">Click here to listen Better Now from Post Malone</a></li>
+      </ul>
+      <li>Play Football</li>
+      <li>To Code</li>
+    </ol>
     <hr>
 
     </<p>
-      <h3>Video of Bugatti</h3>
-      <iframe width="420" height="315" src="https://www.youtube.com/embed/PkkV1vLHUvQ&t=29s" frameborder="0" allowfullscreen>
-
-      </iframe>
+      <h3>My Interests:</h3>
+      <p>
+        <ol>
+          <li>Programming in Java</li>
+          <li>Web Developing in HTML,CSS,Javascript,Node,React and MongoDB</li>
+          <li>iOS Development in Xcode and Swift</li>
+        </ol>
+      </p>
       <hr>
-
-    <h3>Timeline of Bugatti</h3>
-    <table cellspacing="20">
-      <thead>
-        <td><strong>Date</strong></td>
-        <td><strong>Work</strong></td>
-      </thead>
-      <tr>
-        <td>1856</td>
-        <td>Birth of Carlo Bugatti</td>
-      </tr>
-      <tr>
-        <td>2000</td>
-        <td>Bugatti presents the Bugatti Veyron 16.4 study</td>
-      </tr>
-    </table>
-
-    <hr>
-    <h2>Skills</h2>
+  <h3>Skills</h3>
     <table>
        <tr>
          <td>
@@ -96,10 +82,8 @@
 
 
 
-      <hr>
-      <br>
-    <a href="garage.html">Why it's in my garage?</a>
-    <br><br><strong><a href="contact.html">Contact Us</a></strong>
+      <hr><br>
+      <strong><a href="contact.html">Contact Me</a></strong><br><br>
      <hr>
 </body>
 
