--- a/contact.html
+++ b/contact.html
@@ -8,35 +8,33 @@
 
 <body>
   <hr>
-  <center>
-    <h2><strong>Contact Us</strong></h2>
-  </center>
+
+    <h2><strong>Contact Me</strong></h2>
+
 
   <hr>
-  <center>
+
 
     <p>Phone No.:- 92xxxxxx95</p>
     <p>Email address:-xyz@gmail.com</p>
     <p>Fax No.:- 234xxxx981</p>
 
-  </center>
+
   <hr>
-  <center>
-    <h2>Sign Up</h2>
     <p>
       <h4>Enter your details:-</h4>
     </p>
-    <form class="" action="index.html" method="post">
+    <form class="" action="mailto:sunnybhatt497@gmail.com" method="post">
       <label>Your Name:-</label>
-      <input type="text" name="" value="">
+      <input type="text" name="yourName" value="">
       <input type="submit" name=""><br><br>
       <label>Password:-</label>
-      <input type="password" name="" value="">
+      <input type="password" name="yourPassword" value="">
       <input type="submit" name=""><br><br>
       <label>Upload your image:-</label>
-      <input type="file" name=""><br><br>
+      <input type="file" name="yourImage"><br><br>
       <label>Enter your date of birth:-</label>
-      <input type="date" name="" value=""><br><br>
+      <input type="date" name="yourDateofBirth" value=""><br><br>
 
       <table>
         <label>Gender:-</label>
@@ -46,7 +44,7 @@
           <td><label>Male:-</label></td>
 
           <td>
-            <input type="radio" name="" value="">
+            <input type="radio" name="yourGender" value="">
 
           </td>
 
@@ -58,10 +56,16 @@
 
           <td><label>Female:-</label></td><br>
           <td>
-            <input type="radio" name="" value="">
+            <input type="radio" name="yourGender" value="">
+
           </td>
           <td><label>Rather Not Say:-</label></td><br />
-          <td><input type="radio"/></td>
+          <td>
+            <input type="radio" name="yourGender" value="">
+          </td>
+
+
+
 
 
 
@@ -70,9 +74,14 @@
         </tr>
       </table><br>
       <label>Enter your age</label>
+
         <input type="range" name="" value="">
+        <label>Leave your message here:</label><br><br>
+        <textarea name="yourMessage" rows="10" cols="30"></textarea>
+        <input type="submit" name="">
     </form>
-  </center>
+
+
   <hr>
 
 
