--- a/contact.html
+++ b/contact.html
@@ -24,19 +24,22 @@
     <p>
       <h4>Enter your details:-</h4>
     </p>
-    <form class="" action="mailto:sunnybhatt497@gmail.com" method="post">
+    <form class="" action="mailto:sunnybhatt497@gmail.com" method="post" enctype="text/plain">
       <label>Your Name:-</label>
       <input type="text" name="yourName" value="">
       <input type="submit" name=""><br><br>
-      <label>Password:-</label>
-      <input type="password" name="yourPassword" value="">
+      <label>Your Email:-</label>
+      <input type="email" name="yourEmail" value="">
       <input type="submit" name=""><br><br>
-      <label>Upload your image:-</label>
-      <input type="file" name="yourImage"><br><br>
-      <label>Enter your date of birth:-</label>
-      <input type="date" name="yourDateofBirth" value=""><br><br>
+      <label>Your Message:-</label><br>
+      <textarea name="yourMessage" rows="10" cols="30"></textarea>
+      <input type="submit" name="">
+    </form>
+  <hr>
+</body>
+</html>
 
-      <table>
+      <!--<table>
         <label>Gender:-</label>
 
         <tr>
@@ -44,7 +47,7 @@
           <td><label>Male:-</label></td>
 
           <td>
-            <input type="radio" name="yourGender" value="">
+            <input type="radio" name="Male" value="">
 
           </td>
 
@@ -56,12 +59,12 @@
 
           <td><label>Female:-</label></td><br>
           <td>
-            <input type="radio" name="yourGender" value="">
+            <input type="radio" name="yourGender" name="Female" value="">
 
           </td>
           <td><label>Rather Not Say:-</label></td><br />
           <td>
-            <input type="radio" name="yourGender" value="">
+            <input type="radio" name="Rather Not Say" value="">
           </td>
 
 
@@ -73,18 +76,7 @@
 
         </tr>
       </table><br>
-      <label>Enter your age</label>
 
-        <input type="range" name="" value="">
         <label>Leave your message here:</label><br><br>
         <textarea name="yourMessage" rows="10" cols="30"></textarea>
-        <input type="submit" name="">
-    </form>
-
-
-  <hr>
-
-
-</body>
-
-</html>
+        <input type="submit" name="">-->
