--- a/dadinfo.html
+++ b/dadinfo.html
@@ -19,7 +19,7 @@
       <input type="text" name="yourName" value="">
       <input type="submit" name=""><br><br>
       <label>Your Email:-</label>
-      <input type="text" name="yourEmail" value="">
+      <input type="email" name="yourEmail" value="">
       <input type="submit" name=""><br><br>
       <label>Leave your case details here:</label><br><br>
       <textarea name="yourCase" rows="10" cols="30"></textarea>
